k8s/portal-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portal-api
  namespace: default

spec:
  type: ClusterIP

  selector:
    app: portal-api

  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
